# TaskTimer

./: README.md  TaskTimer.cabal
src/: Main.hs  OptParser.hs  Timer.hs
