name:                TaskTimer
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/exallium/TaskTimer#readme
license:             BSD3
license-file:        LICENSE
author:              Alex Hart
maintainer:          alex.hart658@gmail.com
copyright:           Copyright: (c) 2016 Alex Hart
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable TaskTimer
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , optparse-applicative >= 0.13.2.0 && < 0.14
                     , process >= 1.4.3.0 && < 1.5
  other-modules:       OptParser, Timer
